--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
-    margin: auto;
+    margin: 0 auto;
     padding: auto;
     text-align: center;
   }
