--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body{
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
+    top:50%;
+    left: 50%;
     margin: 0 auto;
     padding: auto;
     text-align: center;
